Rename from "jquery-picplus" to "jquery.picplus"

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "svg"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/matthewwithanm/jquery-picplus",
+  "homepage": "https://github.com/matthewwithanm/jquery.picplus",
   "ignore": [
     "**/.*",
     "node_modules",
