--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/matthewwithanm/jquery-picplus.git"
+    "url": "https://github.com/matthewwithanm/jquery.picplus.git"
   },
   "keywords": [
     "jquery",
