--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "mversion": "~0.2.0"
+    "grunt-cli": "~0.1.9",
+    "grunt": "~0.4.1",
+    "grunt-bump": "0.0.11"
   }
 }
